
	* bin/cygport.in (__prep_empty_dirs): Notify when removing empty dirs.

	* lib/fox.cygclass: Allow building separate apps and libs from one -src.

	* bin/cygport.in (__prepman): Relocate /usr/man directory if present.

	* lib/php.cygclass: Fix DESCRIPTION.

	* lib/gst-plugins0.10.cygclass: Update plugin list for base 0.10.19,
	good 0.10.8, and bad 0.10.7.
	Fix build where GST_PLUGINS_SRC is defined.

	* lib/php.cygclass: Add capability for external PHP_CHANNELs.
	(php_postinst): Fix .ini script for Zend extensions.

	* lib/gnome2.cygclass (gnome2_autoreconf): Use gnome-autogen.sh.

	* bin/cygport.in (__prepstrip): Remove Mono .mdb debug symbols.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.9 ***

	* bin/cygport.in (unpack): Add support for .tar.lzma archives.

	* bin/cygport.in (cygautoreconf, __pkg_diff):
	* bin/doexe:
	* bin/prep_libtool_modules.sh:
	* lib/berkdb.cygclass (berkdb_autoreconf):
	* lib/gnome2.cygclass (gnome2_autoreconf):
	* lib/kde3.cygclass (kde3_autoreconf):
	Make compatible with libtool-2.2.

	* lib/R.cygclass: Define HOMEPAGE,SRC_URI,etc. only for CRAN packages.

	* lib/gtk2-perl.cygclass (gtk2_perl_compile):
	Fix linking to other modules for perl-5.10.

	* bin/cygport.in (cygautoreconf): Fixed typo in NO_LIBTOOLIZE.

	* CYGWIN-PATCHES/README:
	* bin/cygport.in (__src_fetch):
	* lib/Makefile.am:
	* lib/hg.cygclass: New cygclass for Mercurial checkouts.

	* lib/perl.cygclass (perl_postinst): Just delete perllocal.pod stub.

	* lib/php.cygclass (php_postinst): Cleanup /tmp/pear.

	* lib/R.cygclass: Updated HOMEPAGE.

	* lib/gtk2-perl.cygclass (gtk2_perl_compile): Fix Cairo linkage.

	* lib/gst-plugins0.10.cygclass: Updated for gst-plugins-bad 0.10.6.

	* bin/cygport.in (__src_prep) [UNSTABLE_API]:
	Run src_patch_hook, if defined, after SRC_PATCH patching.

	* bin/cygport.in (__prepetc):
	Allow either postinstall.sh or PN.postinstall (ditto with preremove).